Fix issue on small devices.

--- a/Yusuf.Zerdazi.Web/angular-project/src/styles.css
+++ b/Yusuf.Zerdazi.Web/angular-project/src/styles.css
@@ -76,12 +76,23 @@ section {
     z-index: 321;
     height: 0;
     width: 100%;
-    padding: 50px 0;
-    margin: 25px 0;
+    padding: 45px 0;
+    margin: 30px 0;
 }
 
 @media (max-width: 992px) {
     .banner{
         display: none;
+    }
+    header {
+        height: 75px!important;
+    }
+    #header_wave{
+        height: 75px!important;
+    }
+    .header_title {
+        height: 50px!important;
+        margin: 12.5px 0;
+        padding: 12.5px 0;
     }
 }
